deployment-yamls/deployment-book-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-backend-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-backend-svc
      type: deploy
  template:
    metadata:
      labels:
        app: book-backend-svc
        type: deploy
    spec:
      containers:
        - name: book-backend-svc
          imagePullPolicy: IfNotPresent
          image: book-backend-svc:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: "200m"
              memory: "500Mi"
            requests:
              cpu: "100m"
              memory: "100Mi"
