deployment-yamls/book-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-backend-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: book-backend-svc
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
