deployment-yamls/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
