deployment-yamls/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: mongo-svc
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
