deployment-yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: bookapp
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  tls:
  - hosts:
    - app.example.com
    secretName: ingress-cert
  - hosts:
    - apis.example.com
    secretName: ingress-cert-apis
  rules:
  - host: app.example.com
    http:
      paths:
      - backend:
          service:
            name: frontend-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: apis.example.com
    http:
      paths:
      - backend:
          service:
            name: book-backend-svc
            port:
              number: 8000
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
